--- a/HTML5/settings.html
+++ b/HTML5/settings.html
@@ -23,10 +23,10 @@
  
   <div data-role="content"> 
     <ul data-role="listview" data-inset="true">
-	  	<li><a href="#Account" data-transition="flip">Account</a></li>
-		<li><a href="#Music" data-transition="flip">Music</a></li>
-		<li><a href="#Categories" data-transition="flip">Categories</a></li>
-		<li><a href="#General" data-transition="flip">General</a></li>
+	  	<li><a href="#Account" data-transition="slide">Account</a></li>
+		<li><a href="#Music" data-transition="slide">Music</a></li>
+		<li><a href="#Categories" data-transition="slide">Categories</a></li>
+		<li><a href="#General" data-transition="slide">General</a></li>
 		</ul> 
   </div>
 	<div data-role="footer">
