--- a/HTML5/settings.html
+++ b/HTML5/settings.html
@@ -17,7 +17,7 @@
 
 <div data-role="page" data-theme="b" id="home">
  <div data-role="header" data-position="inline">
- <a href="index.html" data-role="button" data-icon="grid" data-ajax="false" data-theme="a">Back</a>
+ <a href="index.html" data-role="button" data-icon="arrow-l" data-ajax="false" data-theme="a">Back</a>
  <h1>Quantify This! Settings</h1>
  </div>
  
@@ -37,7 +37,7 @@
 <div data-role="page" data-theme="b" id="Account">
 
   <div data-role="header" data-position="inline">
-  	<a href="#home" data-role="button" data-icon="grid" data-back="true" data-theme="a">Back</a>
+  	<a href="#home" data-role="button" data-icon="arrow-l" data-back="true" data-theme="a">Back</a>
     <h1>Account Settings</h1>
 		</div>
 
@@ -52,7 +52,7 @@
 <div data-role="page" data-theme="b" id="Music">
 
   <div data-role="header">
-	<a href="#home" data-role="button" data-icon="grid" data-back="true" data-theme="a">Back</a>
+	<a href="#home" data-role="button" data-icon="arrow-l" data-back="true" data-theme="a">Back</a>
     <h1>Music Settings</h1>
 			</div>
 
@@ -68,7 +68,7 @@
 <div data-role="page" data-theme="b" id="Categories">
 
   <div data-role="header">
-	<a href="#home" data-role="button" data-icon="grid" data-back="true" data-theme="a">Back</a>
+	<a href="#home" data-role="button" data-icon="arrow-l" data-back="true" data-theme="a">Back</a>
     <h1>Categories Settings</h1>
 			</div>
 
@@ -84,7 +84,7 @@
 <div data-role="page" data-theme="b" id="General">
 
   <div data-role="header">
-	<a href="#home" data-role="button" data-icon="grid" data-back="true" data-theme="a">Back</a>
+	<a href="#home" data-role="button" data-icon="arrow-l" data-back="true" data-theme="a">Back</a>
     <h1>General Settings</h1>
 			
   </div>
