De laatste versie
Als er nog iemand vragen heeft over de code, mag je altijd mailen ^^

--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -27,6 +27,7 @@ a {text-decoration:none;}
   <div data-role="content">  
 	
 	<div id="weatherElement"></div>
+	<center>
 <table>
 <tr>
 <td><a href="#MarkMyMood"><center><img src="images/mood.png" alt="Mark my mood" width="100px"></center></a></td>
@@ -45,6 +46,7 @@ a {text-decoration:none;}
 <td><center><a href="settings.html" data-ajax="false">Settings</a></center></td>
 </tr>
 </table>
+</center>
 <br/>
 <hr />
 <p>Tip of the day</p>
@@ -168,7 +170,7 @@ a {text-decoration:none;}
   </div>
 
   <div data-role="content"> 
-   <p>Hier komen heart rate toestanden.</p>  
+   <p>Hier komt heart rate.</p>  
 	
 	<p id="weather"></p>
 <button data-inline="true" onclick="getLocation()">Show the weather</button>
