- mood bar values are now stored in cloud when clicking mark mood button. - login button added to home screen.

--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -8,6 +8,7 @@
 	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 <link href="verticalSlider.css" rel="stylesheet" type="text/css" />
 <script src="verticalSlider.js"></script>
+<script src="gae_functions.js"></script>
 
 <style type="text/css">
 a {text-decoration:none;}
@@ -17,54 +18,55 @@ a {text-decoration:none;}
 </head>
 
 <body>
-
+<!-- Home Page! -->
 <div data-role="page" data-theme="b" id="Home">
-
+  <!-- Home Page Header -->
   <div data-role="header" data-position="inline">
   	<h1>Quantify This!</h1>
-		</div>
-	
-  <div data-role="content">  
-	
-	<div id="weatherElement"></div>
-	<center>
-<table>
-<tr>
-<td><a href="#MarkMyMood"><center><img src="images/mood.png" alt="Mark my mood" width="100px"></center></a></td>
-<td><a href="#CalendarView"><center><img src="images/calendar_view.png" alt="Calendar View" width="100px"></center></a></td>
-</tr>
-<tr>
-<td><center><a href="#MarkMyMood"> Mark my mood</a></center></td>
-<td><center><a href="#CalendarView">Calendar view</a></center></td>
-</tr>
-<tr>
-<td><a href="#Statistics"><center><img src="images/statistics.png" alt="Statistics" width="100px"></center></a></td>
-<td><a href="settings.html" data-ajax="false"><center><img src="images/settings.png" alt="Settings" width="100px"></center></a></td>
-</tr>
-<tr>
-<td><center><a href="#Statistics">Statistics</a></center></td>
-<td><center><a href="settings.html" data-ajax="false">Settings</a></center></td>
-</tr>
-</table>
-</center>
-<br/>
-<hr />
-<p>Tip of the day</p>
-<br/><br/><br/><br/><br/><br/><br/><br/>
+	<a href="http://localhost:8888/LoginService"><center><img src="images/login-button.png" alt="Log in with google account for access to app engine." width="100px"></center></a>
   </div>
-
-	
+    <div data-role="content">
+    <div id="weatherElement"></div>
+  <center>
+    <!-- Buttons Table! -->
+    <table>
+      <tr>
+	<td><a href="#MarkMyMood"><center><img src="images/mood.png" alt="Mark my mood" width="100px"></center></a></td>
+	<td><a href="#CalendarView"><center><img src="images/calendar_view.png" alt="Calendar View" width="100px"></center></a></td>
+      </tr>
+      <tr>
+	<td><center><a href="#MarkMyMood"> Mark my mood</a></center></td>
+	<td><center><a href="#CalendarView">Calendar view</a></center></td>
+      </tr>
+      <tr>
+	<td><a href="#Statistics"><center><img src="images/statistics.png" alt="Statistics" width="100px"></center></a></td>
+	<td><a href="settings.html" data-ajax="false"><center><img src="images/settings.png" alt="Settings" width="100px"></center></a></td>
+      </tr>
+      <tr>
+	<td><center><a href="#Statistics">Statistics</a></center></td>
+	<td><center><a href="settings.html" data-ajax="false">Settings</a></center></td>
+      </tr>
+    </table>
+  </center>
+  <br/>
+  <hr />
+  <p>Tip of the day</p>
+  <br/><br/><br/><br/><br/><br/><br/><br/>
+  </div>
+  <!-- Home Page Footer -->
   <div data-role="footer">
     <h4>&copy; Quantify This! Designers</h4>
   </div>
 </div>
-<div data-role="page" data-theme="b" id="MarkMyMood">
 
+
+<!-- MarkMyMood PAGE! -->
+<div data-role="page" data-theme="b" id="MarkMyMood">
   <div data-role="header">
 	  <h1>Mark My Mood</h1>
 				<a href="#Home" rel="external" data-icon="arrow-l" class="ui-btn-left" data-transition="slidedown">Back</a>
   </div>
-	
+  <center>
   <div data-role="content"> 
     <table>
 <tr>
@@ -93,18 +95,19 @@ a {text-decoration:none;}
 <td style="padding-left:55px"><a href="#SleepTime">Sleep</a> </td>
 </tr>
 </table>
-
 <div data-role="controlgroup" data-type="horizontal">
-	 		<a href="#MarkMoodThanks" data-role="button" data-icon="check" data-inline="true">Mark my mood</a>
+	 		<a href="#MarkMoodThanks" data-role="button" data-icon="check" data-inline="true" onclick="sendMood()">Mark my mood</a>
 	</div>
   </div>
-
+  </center>
   <div data-role="footer">
     <h4>&copy;  Quantify This! Designers</h4>
   </div>
 </div>
 
 
+
+<!--  Thanks PAGE! -->
 <div data-role="page" data-theme="b" id="MarkMoodThanks">
 
   <div data-role="header" data-position="inline">
@@ -123,6 +126,10 @@ a {text-decoration:none;}
   </div>
 </div>
 
+
+
+
+<!--  Calendar View PAGE! -->
 <div data-role="page" data-theme="b" id="CalendarView">
 
   <div data-role="header" data-position="inline">
@@ -141,6 +148,10 @@ a {text-decoration:none;}
   </div>
 </div>
 
+
+
+
+<!--  Statistics View PAGE! -->
 <div data-role="page" data-theme="b" id="Statistics">
 
   <div data-role="header" data-position="inline">
@@ -159,12 +170,41 @@ a {text-decoration:none;}
   </div>
 </div>
 
+
+
+<!-- Sleep Page! -->
+<div data-role="page" data-theme="b" id="SleepTime">
+
+  <div data-role="header" data-position="inline">
+  	<h1>Quantify this! - Amount of Sleep</h1>
+<a href="#MarkMyMood" data-icon="arrow-l" rel="external" class="ui-btn-left"  data-transition="slidedown">Back</a>
+  </div>
+
+	
+  <div data-role="content">
+    <center>
+   <p>How many hours did you sleep?</p>
+	 <input type="range" name="slider-many-hours" id="slider-many-hours" value="8" min="1" max="22" data-highlight="true" />   
+	 <p>How well did you sleep?</p>
+	 <input type="range" name="slider-many-hours" id="slider-many-hours" value="7" min="1" max="10" data-highlight="true" />    
+	 <br/><br/><br/>
+
+	<br/><br/><br/>
+	</center>
+  </div>
+
+	
+  <div data-role="footer">
+    <h4>&copy; Quantify This! Designers</h4>
+  </div>
+</div>
+
+
+
+<!--  Heart Rate PAGE! -->
 <div data-role="page" data-theme="b" id="HeartRate">
 
   <div data-role="header" data-position="inline">
-	
-
-	
   	<h1>Quantify this! - Heart Rate</h1>
 <a href="#MarkMyMood" data-icon="arrow-l" rel="external" class="ui-btn-left"  data-transition="slidedown">Back</a>
   </div>
@@ -234,30 +274,6 @@ function showPosition(position)
 	}
 
 </script>
-  </div>
-
-	
-  <div data-role="footer">
-    <h4>&copy; Quantify This! Designers</h4>
-  </div>
-</div>
-
-<div data-role="page" data-theme="b" id="SleepTime">
-
-  <div data-role="header" data-position="inline">
-  	<h1>Quantify this! - Amount of Sleep</h1>
-<a href="#MarkMyMood" data-icon="arrow-l" rel="external" class="ui-btn-left"  data-transition="slidedown">Back</a>
-  </div>
-
-	
-  <div data-role="content"> 
-   <p>How many hours did you sleep?</p>
-	 <input type="range" name="slider-many-hours" id="slider-many-hours" value="8" min="1" max="22" data-highlight="true" />   
-	 <p>How well did you sleep?</p>
-	 <input type="range" name="slider-many-hours" id="slider-many-hours" value="7" min="1" max="10" data-highlight="true" />    
-	 <br/><br/><br/>
-
-	<br/><br/><br/>
   </div>
 
 	
