sleep values are now added to the HTTP post

--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -186,7 +186,7 @@ a {text-decoration:none;}
    <p>How many hours did you sleep?</p>
 	 <input type="range" name="slider-many-hours" id="slider-many-hours" value="8" min="1" max="22" data-highlight="true" />   
 	 <p>How well did you sleep?</p>
-	 <input type="range" name="slider-many-hours" id="slider-many-hours" value="7" min="1" max="10" data-highlight="true" />    
+	 <input type="range" name="slider-eff" id="slider-eff" value="7" min="1" max="10" data-highlight="true" />    
 	 <br/><br/><br/>
 
 	<br/><br/><br/>
