--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -73,12 +73,13 @@ a {text-decoration:none;}
 <div data-role="page" data-theme="b" id="MarkMyMood">
   <div data-role="header">
 	  <h1>Mark My Mood</h1>
-				<a href="#Home" rel="external" data-icon="arrow-l" class="ui-btn-left" data-transition="slidedown">Back</a>
+				<a href="#Home" rel="external" data-icon="arrow-l" class="ui-btn-left" data-transition="slidedown" onclick="returnFromMarkMood()">Back</a>
   </div>
   <center>
   <div data-role="content">
   <p id="markevent">No event selected</p>
   <input type="hidden" name="markeventid" id="markeventid" />
+  <input type="hidden" name="eventcategory" id="eventcategory" />
     <table>
 <tr>
 <td style="padding-right:20px"><input type="range" id="slider1" min="0" max="100" value="20" step="1" sliderOrientation="verticalInverted"  /></td>
@@ -98,8 +99,8 @@ a {text-decoration:none;}
 <br/>
 <table>
 <tr>
-<td><a href="#HeartRate"><center><img src="images/heartrate.png" alt="Heart Rate" width="150px"></center></a></td>
-<td><a href="#SleepTime"><center><img src="images/sleeptime.png" alt="Amount of Sleep" width="150px"></center></a></td>
+<td><a href="#HeartRate" id="heartratebutton"><center><img src="images/heartrate.png" alt="Heart Rate" width="150px"></center></a></td>
+<td><a href="#SleepTime" id="sleepbutton"><center><img src="images/sleeptime.png" alt="Amount of Sleep" width="150px"></center></a></td>
 </tr>
 <tr>
 <td style="padding-left:30px"><a href="#HeartRate">Heart Rate</a> </td>
