-heart rate shake added.

--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -12,7 +12,7 @@
 <script src="gae_functions.js"></script>
 <script src="calendar_api.js"></script>
 <script src="https://apis.google.com/js/client.js?onload=loadCalendar"></script>
-
+<script src="heart_rate.js?onload=startAccelerometerOutput"></script>
 <style type="text/css" ></style>
 <style type="text/css">
 a {text-decoration:none;}
